[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mylogger"
version = "0.1.0"
description = "A loguru-based logger for Python that easily switches between structured JSON for production and a readable console format for development."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["loguru>=0.7.3", "orjson>=3.11.3"]
